tests/fixtures/invalid/none_floordiv_bytes.py
# Cannot floor divide None and Bytes
x: None = None // b"hello"
